--- a/src/UI/CMakeLists.txt
+++ b/src/UI/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB SOURCES "*.h" "*.cpp" "*.ui")
 
-target_sources(QtCryptarxis PUBLIC ${SOURCES})
+target_sources(QtCryptarxis PRIVATE ${SOURCES})
+target_link_libraries(QtCryptarxis PRIVATE Qt::Gui)
