--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB SOURCES "*.h" "*.cpp")
 
-target_sources(QtCryptarxis PUBLIC ${SOURCES})
-target_link_libraries(QtCryptarxis PUBLIC givaro::givaro ethash::keccak)
+target_sources(QtCryptarxis PRIVATE ${SOURCES})
+target_link_libraries(QtCryptarxis PRIVATE givaro::givaro ethash::keccak)
 
-target_sources(QtCryptarxis_test PUBLIC ${SOURCES})
-target_link_libraries(QtCryptarxis_test PUBLIC givaro::givaro ethash::keccak)
+target_sources(QtCryptarxis_test PRIVATE ${SOURCES})
+target_link_libraries(QtCryptarxis_test PRIVATE givaro::givaro ethash::keccak)
