--- a/src/eth/CMakeLists.txt
+++ b/src/eth/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB SOURCES "*.h" "*.cpp")
 
-target_sources(QtCryptarxis PUBLIC ${SOURCES})
-target_sources(QtCryptarxis_test PUBLIC ${SOURCES})
+target_sources(QtCryptarxis PRIVATE ${SOURCES})
+target_sources(QtCryptarxis_test PRIVATE ${SOURCES})
