--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB SOURCES "*.h" "*.cpp")
 
 target_sources(QtCryptarxis PRIVATE ${SOURCES})
-target_link_libraries(QtCryptarxis PRIVATE OpenSSL::Crypto)
+target_link_libraries(QtCryptarxis PRIVATE OpenSSL::Crypto  ${CMAKE_DL_LIBS})
 
 target_sources(QtCryptarxis_test PRIVATE ${SOURCES})
-target_link_libraries(QtCryptarxis_test PRIVATE OpenSSL::Crypto)
+target_link_libraries(QtCryptarxis_test PRIVATE OpenSSL::Crypto  ${CMAKE_DL_LIBS})
